# GHCN_Qt

GHCN_Gui/: .gitignore  CMakeLists.txt  dataprovider.cpp  dataprovider.hpp  dockwidget.cpp  ghcn_cli.cpp  ghcn_dataprovider.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  measurement.cpp  measurement.hpp  station.cpp  station.hpp
GHCN_Gui/snippets/: Override_leaveEvent.txt  Request_with_Qt.txt
GHCN_Gui_Test/: CMakeLists.txt  main.cpp  test_main.cpp
GHCN_Gui_Test/data/: ghcnd-inventory_gm.txt  ghcnd-stations_1st_ten.txt  ghcnd-stations_gm.txt
GHCN_Gui_Test/data/validation/: Comp_GME00102380_2024-05-31_Winter_1960.csv  Comp_GME00102380_2024-05-31_Winter_1963.csv  Comp_GME00102380_2024-05-31_Winter_2000.csv
